tests/paczka1/fuzzy1/46058546.err
Error in line 1: wFcYYzCCW S6D 79,8
Error in line 2: EVY5 A388 96,9
Error in line 10: wFcYYzCCW S60 72,9
Error in line 12: w5fE S60 30,1
Error in line 13: Ab3lm14tT S629 28,5
Error in line 28: EVY5 S60 -1,64
Error in line 27: EVY5 S60 30,8
Error in line 40: S629 S180 -1,1
